src/src/ptlparser/PtlParser.java
/* Generated By:JavaCC: Do not edit this line. PtlParser.java */
package ptlparser;

import lib.*;
import java.util.HashMap;
import java.util.Map;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.io.InputStream;
import java.io.File;
import aux.Comandos;

public class PtlParser implements PtlParserConstants {
  private Protocol p;

  private boolean protocolPart;
  private String statePrefix;
  private String stateSufix;
  private Map<String, Participant> participantMap;
  private Map<String, State> mapState;

  private Map<String, Participant> map;
  private State stateFrom;
  private State stateTo;
  private int level;

  private boolean thereIsInitialState = false;
  private boolean thereIsFinalState = false;
  private boolean deliver = true;

  private PtlParser parser;

  public static Protocol loadProtocol(String file) throws Exception {
        Protocol temp = PtlParser.loadComposedProtocol(file, null, null, null, null, 0);

        if (temp == null)
                throw new Error("Compiler error.");

        temp.setSpecification(Comandos.loadFile(file));
        return temp;
  }

  public void setParser(PtlParser parser) {
        this.parser = parser;
  }

  public void setProtocol(Protocol p) {
        this.p = p;
  }

  public Protocol getProtocol() {
    if (deliver)
                return p;
        return null;
  }

  public static Protocol loadComposedProtocol(String file, Protocol p, Map<String, Participant> map, State stateFrom, State stateTo, int level)  throws ParseException {
        InputStream input;
        try {
                input = new FileInputStream(file);
                PtlParser parserCmp = new PtlParser(input);
                parserCmp.setParser(parserCmp);
                parserCmp.setProtocol(p);
                boolean success = parserCmp.loadComposedProtocol(map, stateFrom, stateTo, level);
                if (success)
                        return parserCmp.getProtocol();
                else
                        return null;
        } catch (FileNotFoundException e1) {
                e1.printStackTrace();
        }
        return null;
  }

  public boolean loadComposedProtocol(Map<String, Participant> map, State stateFrom, State stateTo, int level)  throws ParseException {
        protocolPart = stateFrom != null;
        participantMap = new HashMap<String, Participant>();
        if (stateFrom == null) {
                stateSufix = "";
                statePrefix = "";
        } else {
                stateSufix = "[" + stateFrom.getId() + "]";
                statePrefix = "";
                protocolPart = true;
        }
        mapState = new HashMap<String, State>();

        this.map = map;
        this.stateFrom = stateFrom;
        this.stateTo = stateTo;
        this.level = level;

          try
          {
            Protocol xp = parser.protocol();
            return deliver;
          }
          catch (Exception e)
          {
            System.out.println("Compiler error. " + level);
            System.out.println(e.getMessage());
          }
          catch (Error e)
          {
            System.out.println("Compiler error. " + level);
            System.out.println(e.getMessage());
          }
          return false;
  }

  public static void main(String args []) throws Exception
  {
      if (args.length < 1) {
          System.out.println("Inform the protocol file to compile.");
      } else {
          loadProtocol(args[0]);
      }
  }

        private boolean validateCardinalityConsistence(Participant participant, String transitionCard) {
                if (transitionCard.equals(""))
                        return true;

                String participantCard;

                if (participant.getqMax() == null)
                        participantCard = String.valueOf(participant.getMax());
                else
                        participantCard = participant.getqMax();

                return validateCardinalityConsistence(participantCard, transitionCard);
        }

        private boolean validateCardinalityConsistence(String max, String min) {
                if (min.equals(""))
                        return true;

                if (max.equals("all")) {
                        return true;
                } else if (max.equals("+")) {
                        if (min.equals("all")) {
                                return false;
                        }
                } else {
                        if (min.equals("all")) {
                                return false;
                        } else if (min.equals("+")) {
                                return true;
                        } else {
                                int iMax = Integer.valueOf(max);
                                int iMin = Integer.valueOf(min);
                                if (iMax < iMin)
                                        return false;
                        }
                }

                return true;
        }

        private String unQuote(String str) {
        if (str.charAt(0) == '"' && str.charAt(str.length()-1) == '"' )
                return str.substring(1, str.length()-1);
        return str;
        }

  final public Protocol protocol() throws ParseException {
                       Token name;
    jj_consume_token(TK_PROTOCOL);
    name = jj_consume_token(ID);
                                                if (!protocolPart) {
                                                        p = new Protocol();
                                                        p.setName(name.image);
                                                }
    jj_consume_token(35);
    description();
    goals();
    participants();
    states();
    transitions();
    jj_consume_token(36);
                              {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  final public void transitions() throws ParseException {
    jj_consume_token(TK_TRANSITIONS);
    jj_consume_token(37);
    label_1:
    while (true) {
      transition();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
  }

  final public void transition() throws ParseException {
                     Transition t = new Transition();
                                        String sId;
                                        String dId;
                                        String sIdComplete;
                                        String dIdComplete;
    sId = stateId();
    jj_consume_token(38);
    dId = stateId();
    jj_consume_token(39);
                                        sIdComplete = statePrefix+sId+stateSufix;
                                        dIdComplete = statePrefix+dId+stateSufix;

                                                State s;
                                                State sNew;
                                                if (!protocolPart || (protocolPart && !mapState.containsKey(sIdComplete))) {
                                                        s = p.getStateByName(sIdComplete);
                                                } else {
                                                        //System.out.println("State mapped from " + sIdComplete + " to " + mapState.get(sIdComplete).getId());
                                                        s = mapState.get(sIdComplete);
                                                }
                                                if (s == null) {

                                                        sNew = new State(sIdComplete,
                                                                                                false,
                                                                                                false);
                                                        p.addState(sNew);
                                                        s = sNew;

                                                        //throw new Error("State "+sIdComplete+" does not exist.");
                                                }

                                                if (s.isFinalState()) {
                                                        {if (true) throw new Error("The "+s.getId() +" is a final state. It does not allow transitions");}
                                                }

                                                State d;
                                                if (!protocolPart || (protocolPart && !mapState.containsKey(dIdComplete))) {
                                                        d = p.getStateByName(dIdComplete);
                                                } else {
                                                        d = mapState.get(dIdComplete);
                                                        //System.out.println("State d mapped from " + dIdComplete + " to " + mapState.get(dIdComplete).getId());
                                                }
                                                if (d == null) {

                                                        sNew = new State(dIdComplete,
                                                                                                false,
                                                                                                false);
                                                        p.addState(sNew);
                                                        d = sNew;

                                                        //throw new Error("State "+dIdComplete+" does not exist.");
                                                }

                                                t.setCurrentState(s);
                                                t.setNextState(d);
    transitionType(t);
  }

  final public void transitionType(Transition t) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      occurrence(t);
                                                    t.getCurrentState().addTransition(t);
                                                    p.addTransition(t);
      break;
    case TK_TIMEOUT:
      timeout(t);
      break;
    case TK_IMPORT:
      importt(t);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void timeout(Transition t) throws ParseException {
                              Token timeoutT;
    jj_consume_token(TK_TIMEOUT);
    timeoutT = jj_consume_token(INTEGER);
                                  t.setType(Transition.TIMEOUT);
                                  State s = t.getCurrentState();

                                  if (s.getGotoStateOnTimeout() != null) {
                                      {if (true) throw new Error("Multiple timeout defined for the state " + s.getId() + ".");}
                                  }

                                  State timeoutState = t.getNextState();
                                  s.setTimeout(Long.valueOf(Integer.parseInt(timeoutT.image)));
                                  s.setGotoStateOnTimeout(timeoutState);
                                  s.setTimeoutTransition(t);
    jj_consume_token(40);
  }

  final public void importt(Transition t) throws ParseException {
                              Token fileT;
    jj_consume_token(TK_IMPORT);
    fileT = jj_consume_token(STRING);
    mapping();
                State s = t.getCurrentState();
                State toState = t.getNextState();
                Protocol temp = PtlParser.loadComposedProtocol(unQuote(fileT.image), p, participantMap, s, toState, level+1);
                if (temp == null)
                        deliver = false;
    jj_consume_token(40);
  }

  final public void mapping() throws ParseException {
    jj_consume_token(TK_MAPPING);
    jj_consume_token(35);
    label_2:
    while (true) {
      mapFromTo();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(36);
  }

  final public void mapFromTo() throws ParseException {
                   String from;
                                   String to;
    from = mappingFrom();
    to = mappingTo();
    jj_consume_token(40);
                Participant participantFrom;
                if (!protocolPart || (protocolPart && !map.containsKey(from))) {
                        participantFrom = p.getParticipantByName(from);
                } else {
                        participantFrom = map.get(from);
                }

                if (participantFrom == null) {
                        {if (true) throw new Error("Participant "+from+" does not exist.");}
                }

                participantMap.put(to, participantFrom);
  }

  final public String mappingFrom() throws ParseException {
                        String id;
    id = participantId();
                                            {if (true) return id;}
    throw new Error("Missing return statement in function");
  }

  final public String mappingTo() throws ParseException {
                      String id;
    id = participantId();
                                          {if (true) return id;}
    throw new Error("Missing return statement in function");
  }

  final public void trigger(Transition t) throws ParseException {
                                        String pattern = "";
                                        String content = "";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TK_TRIGGER:
      pattern = pattern();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 37:
        content = content();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      break;
    case 37:
      content = content();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(40);
                                  t.addTransitionTrigger(new Trigger(pattern, content));
  }

  final public String pattern() throws ParseException {
                    Token patternT;
    jj_consume_token(TK_TRIGGER);
    patternT = jj_consume_token(STRING);
                                    {if (true) return unQuote(patternT.image);}
    throw new Error("Missing return statement in function");
  }

  final public String content() throws ParseException {
                    Token contentT;
    jj_consume_token(37);
    contentT = jj_consume_token(STRING);
                                    {if (true) return unQuote(contentT.image);}
    throw new Error("Missing return statement in function");
  }

  final public void occurrence(Transition t) throws ParseException {
    participantOccurrence(t, false);
    jj_consume_token(41);
    duty(t);
    jj_consume_token(42);
    participantOccurrence(t, true);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TK_TRIGGER:
    case 37:
      label_3:
      while (true) {
        trigger(t);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TK_TRIGGER:
        case 37:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_3;
        }
      }
      break;
    case 40:
      jj_consume_token(40);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          if (t.getTransitionTriggers().size() == 0)
          {
                t.addTransitionTrigger(new Trigger("", ""));
          }
  }

  final public void duty(Transition t) throws ParseException {
                           Token dutyT;
    dutyType(t);
    dutyT = jj_consume_token(STRING);
                                                   t.setDuty(unQuote(dutyT.image));
  }

  final public void dutyType(Transition t) throws ParseException {
                               Token typeT;
                                                           Token performativeT = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TK_EVENT:
      typeT = jj_consume_token(TK_EVENT);
      break;
    case TK_ACTION:
      typeT = jj_consume_token(TK_ACTION);
      break;
    case TK_MESSAGE:
      typeT = jj_consume_token(TK_MESSAGE);
      jj_consume_token(43);
      performativeT = jj_consume_token(ID);
      jj_consume_token(44);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          String type = typeT.image;
          if (type.equals("message")) {
                t.setType(Transition.MESSAGE);
          } else if (type.equals("action")) {
                t.setType(Transition.ACTION);
          } else {
            t.setType(Transition.EVENT);
          }

          if (performativeT != null)
                t.setPerformative(performativeT.image);
  }

  final public void participantOccurrence(Transition t, boolean destination) throws ParseException {
                                                          String idPlayer;
                                                          Token cardinalityT = null;
    idPlayer = participantId();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      jj_consume_token(43);
      cardinalityT = jj_consume_token(INTEGER);
      jj_consume_token(44);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
                                        Participant e;
                                        if (protocolPart && map.containsKey(idPlayer)) {
                                                e = map.get(idPlayer);
                                        } else {
                                                e = p.getParticipantByName(idPlayer);
                                        }
                                        if (e == null) {
                                                {if (true) throw new Error("Participant "+idPlayer+" does not exist.");}
                                        }
                                        String cardinality;
                                        if (cardinalityT == null)
                                                cardinality = "";
                                        else
                                                cardinality = cardinalityT.image;
                                        if (!validateCardinalityConsistence(e, cardinality)) {
                                                {if (true) throw new Error("There are inconsistence in the cardinality of the " + e.getId() + " with some transition.");}
                                        }

                                        if (destination) {
                                                t.setDestination(e);
                                                if (!cardinality.equals(""))
                                                        t.setCardDestination(Integer.parseInt(cardinality));
                                        } else {
                                                t.setSource(e);
                                                if (!cardinality.equals(""))
                                                        t.setCardSource(Integer.parseInt(cardinality));
                                        }
  }

  final public void states() throws ParseException {
    jj_consume_token(TK_STATES);
    jj_consume_token(37);
    label_4:
    while (true) {
      state();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
    }
                if (!thereIsFinalState) {
                        {if (true) throw new Error("There is no final state in the protocol.");}
                }

                if (!thereIsInitialState) {
                        {if (true) throw new Error("There is no initial state in the protocol.");}
                }
  }

  final public void state() throws ParseException {
                                String idState;
                                Token initialState = null;
                                Token finalState = null;
    idState = stateId();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TK_INITIAL:
    case TK_FINAL:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TK_INITIAL:
        initialState = jj_consume_token(TK_INITIAL);
        break;
      case TK_FINAL:
        finalState = jj_consume_token(TK_FINAL);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(40);
        if (!protocolPart || (protocolPart && initialState == null && finalState == null)) {
                State s = new State(statePrefix+idState+stateSufix,
                                                initialState != null,
                                                finalState != null);

                if (s.isFinalState())
                        thereIsFinalState = true;

                if (s.isInitialState())
                        thereIsInitialState = true;

                p.addState(s);
        } else {
                if (initialState != null) {
                        mapState.put(statePrefix+idState+stateSufix, stateFrom);
                        thereIsInitialState = true;
                }

                if (finalState != null) {
                        mapState.put(statePrefix+idState+stateSufix, stateTo);
                        thereIsFinalState = true;
                }
        }
  }

  final public String stateId() throws ParseException {
                    Token idState;
    idState = jj_consume_token(ID);
                                    {if (true) return idState.image;}
    throw new Error("Missing return statement in function");
  }

  final public void participants() throws ParseException {
    jj_consume_token(TK_PARTICIPANTS);
    jj_consume_token(37);
    label_5:
    while (true) {
      participant();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
    }
  }

  final public void participant() throws ParseException {
                      String id;
                                          String kind;
                                          String roleORtype;
                                          String min = "1";
                                          String max = "1";
